kubernetes/movies-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: movie-app
   namespace: movie-space
   
spec:
    replicas: 2 

    selector:
       matchLabels: 
          app: movie-app


    template:
      metadata:
        labels:
          app: movie-app

      spec:
        containers:
          - name: movie-app

            image: tprff2301/movie-app:latest

            ports: 
            - containerPort: 5000
