kubernetes/movies-service.yml
apiVersion: v1
kind: Service

metadata:
  name: movie-service
  namespace: movie-space

spec: 
  selector:
    app: movie-app

  ports:
   - port: 80
     targetPort: 5000

  type: ClusterIP
