kubernetes/postgre-service.yml
apiVersion: v1
kind: Service

metadata:
    name: postgre-service
    namespace: movie-space

spec:
  selector:
     app: postgre
  
  ports:
  - port: 5432
