kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
   name: movie-ingress
   namespace: movie-space

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 80
